--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
+description: "三月 四月 五月，六月 七月 八月， 九月 十月 十一月"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
