changes to portfolios

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 :("
+description: "又是你啊小伙子，这里是知识的荒原 XD"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
