--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "又是你啊小伙子，这里是知识的荒原 XD"
+description: "来了老板，这里是知识的荒原"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
