--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "三月 四月 五月，六月 七月 八月， 九月 十月 十一月"
+description: "我飞到她的身边，我捧出给她的礼物，是一小块凝固的时间，时间上有美丽的条纹，摸起来像浅海的泥一样柔软 ——《死神永生》"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
